# typosquat

./: .gitignore  config.yaml  pyproject.toml
.github/workflows/: scan.yml
src/find_domains/: cli.py  config.py  pipeline.py
src/find_domains/checker/: availability.py
src/find_domains/llm/: client.py  scorer.py  trend_filter.py  typo_generator.py
src/find_domains/report/: github_summary.py
src/find_domains/trends/: google_trends.py  hackernews.py
src/find_domains/typos/: generator.py
tasks/: todo.md
tests/: test_availability.py  test_pipeline.py  test_typo_generator.py
